# demo_uv_nixpkgs_systemd

./: flake.nix  pyproject.toml
nix/: systemd-service.nix  uv_nixpkgs_derivation.nix
nix/systemd/: options.nix
uv_nixpkgs/: __main__.py  main.py
